@@ -667,6 +667,12 @@ go to previous selected entry or do nothing.
 .TP
 .BI ]s
 go to next selected entry or do nothing.
+.TP
+.BI [z
+go to first sibling of current entry.
+.TP
+.BI ]z
+go to last sibling of current entry.
 .\" ---------------------------------------------------------------------------
 .SH Using Count
 .\" ---------------------------------------------------------------------------
