@@ -427,8 +427,10 @@ const char *tags[] = {
 	"vifm-[count]",
 	"vifm-[d",
 	"vifm-[s",
+	"vifm-[z",
 	"vifm-]d",
 	"vifm-]s",
+	"vifm-]z",
 	"vifm-^",
 	"vifm-al",
 	"vifm-app.txt",
